re-write the ClusterSplittingPanelStack and fix previous bug
- change all the Card to use a Blueprintjs style
- fix the bug of VisualizationModePanel covering the dialog issue

--- a/src/App.css
+++ b/src/App.css
@@ -349,10 +349,6 @@ div.pt-card.sub-option.legend {
     pointer-events: all;
 }
 
-.bp3-panel-stack-header-back {
-    display: none;
-}
-
 .bp3-overlay {
     z-index: 1.1;
 }
@@ -388,7 +384,7 @@ div.pt-card.sub-option.legend {
     top: 50px;
     position: absolute;
     pointer-events: all;
-    z-index: 30;
+    z-index: 20;
 }
 
 /* Override blueprint numeric input, since it's useless unless inline */
